# object-detection

./: .gitignore  README.md  pyproject.toml
configs/: detr.yaml  dino.yaml  fast_rcnn.yaml  faster_rcnn.yaml  rtdetr.yaml  yolov1.yaml
scripts/: download_coco.py  eval.py  precompute_proposals.py  predict.py  train.py
src/objdet/: __init__.py
src/objdet/data/: coco.py  proposals.py  subset.py  transforms.py
src/objdet/engine/: evaluator.py  inference.py  trainer.py
src/objdet/losses/: detection_loss.py  set_criterion.py  yolo_loss.py
src/objdet/models/: backbone.py  detr.py  dino.py  fast_rcnn.py  faster_rcnn.py  fpn.py  rpn.py  rtdetr.py  transformer.py  yolov1.py
src/objdet/ops/: anchors.py  boxes.py  deformable_attn.py  hungarian_matcher.py  matcher.py
src/objdet/utils/: config.py  device.py  mlflow_utils.py  viz.py
tests/: test_boxes.py  test_matcher.py  test_smoke.py
